# RustPg

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/models/: config.rs  history.rs
src/routes/: config.rs  execute.rs  history.rs  mod.rs
src/utils/: db.rs
static/: app.js  index.html  style.css
