[package]
name = "RustPg"
version = "0.1.2"
edition = "2021"

[dependencies]
axum = "0.8.3"
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.4", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "postgres",
    "chrono",
] }
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
uuid = "1.16.0"
